--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "vue-loader": "^17.0.0"
     },
     "dependencies": {
+        "dotenv": "^16.0.1",
         "vue-router": "^4.1.2"
     }
 }
