--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "dependencies": {
         "dotenv": "^16.0.1",
-        "vue-router": "^4.1.2"
+        "vue-router": "^4.1.2",
+        "vue-sweetalert2": "^5.0.5"
     }
 }
