--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -29,7 +29,7 @@ jobs:
           cd /var/www/html/triage/
           git checkout -f 
           git pull
-          npm install
+          #npm install
           npm run dev
 
 
